# StudyPlanner

./: CMakeLists.txt  assets.qrc  inputdialog.cpp  inputdialog.h  inputdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recordshower.cpp  recordshower.h  recordshower.ui  taskitem.cpp  taskitem.h  taskitem.ui
StudyPlanner/: CMakeLists.txt  CMakeLists.txt.old  main.cpp  readme.md
StudyPlanner/backend/: Task.cpp  Task.h  TaskManager.cpp  TaskManager.h
StudyPlanner/backend/include/: DateEntry.h  DateWatch.h  Record.h  RecordManager.h  ReminderScheduler.h  Task.h  TaskManager.h
StudyPlanner/backend/saved_json_file/: RecordManager.json  TaskManager.json
StudyPlanner/backend/src/: DateEntry.cpp  Record.cpp  RecordManager.cpp  Task.cpp  TaskManager.cpp
StudyPlanner/data/: new_task.json
StudyPlanner/frontend_Qt/: CMakeLists.txt  assets.qrc  inputdialog.cpp  inputdialog.h  inputdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  recordshower.cpp  recordshower.h  recordshower.ui  taskitem.cpp  taskitem.h  taskitem.ui
StudyPlanner/test/: CMakeCache.txt  Makefile  cmake_install.cmake  file_IO_test.cpp
assets/: res.qrc
backend/include/: DateEntry.h  RecordManager.h  Task.h  TaskManager.h
backend/src/: RecordManager.cpp  TaskManager.cpp
